# stock_prediction_pipelines

./: .env.example  .gitignore  LICENSE  NEXT STEPS.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  repo_to_json.py
.github/workflows/: ci-cd.yml
config/: settings_example.yaml
docs/: architecture.md  contributing.md  deployment_guide.md  setup_guide.md
integration/: test_end_to_end_pipeline.py  test_lineage_tracking.py
src/: test_airflow_dags.py
src/airflow/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  setup_instructions.md
src/airflow/dags/: airflow_api_setup.md  api_generate_stock_predictions.py  generate_stock_predictions.py  historical_load_basic_stock_data.py  historical_load_enriched_stock_data.py  ingestion_dag.py  nightly_load_basic_stock_data.py  nightly_load_enriched_stock_data.py  nightly_model_dag.py  nightly_train_binary_models.py  nightly_train_sarimax_models.py
src/airflow/dags/common/: config.py  helpers.py
src/airflow/plugins/: custom_operator.py
src/airflow/tests/: test_dags.py
src/airflow_dags/: DockerFile  Dockerfile  entrypoint.sh  pyproject.toml
src/airflow_dags/dags/: ingestion_dag.py
src/airflow_dags/plugins/: custom_operator.py
src/api/: openapi.yaml
src/emr_jobs/: DockerFile  Dockerfile  predictive_model.py  pyproject.toml
src/emr_jobs/tests/: test_predictive_model.py
src/emr_jobs/utils/: spark_utils.py
src/lambdas/: DockerFile  Dockerfile  ai_functions.py  alpha_vantage_functions.py  config.py  database_functions.py  datatype_mapping.csv  pyproject.toml  tracking_functions.py
src/lambdas/ai_analysis/: ai_anaysis_handler.py
src/lambdas/common_layer/: config.py
src/lambdas/common_layer/common_utils/: __init__.py  utils.py
src/lambdas/enrich_stock_data/: handler.py  pyproject.toml
src/lambdas/enrich_stock_data/tests/: test_handler.py
src/lambdas/human_analysis/: build_model.py  why_sarimax.md
src/lambdas/ingest_alpha_vantage/: bulk_historical_load.py  handler.py  ingest_stock_data_handler.py  pyproject.toml
src/lambdas/ingest_alpha_vantage/tests/: test_handler.py
src/lambdas/ingest_postgresql/: handler.py  pyproject.toml
src/lambdas/ingest_postgresql/tests/: test_handler.py
src/lambdas/ingest_s3/: handler.py  pyproject.toml
src/lambdas/ingest_s3/tests/: test_handler.py
src/lambdas/predictive_models/: make_sarimax_prediction.py  train_sarimax_model.py
src/lineage/marquez/: docker-compose.yml
src/lineage/marquez/config/: marquez.yml
src/lineage/openlineage_integration/airflow/: openlineage_plugin.py
src/lineage/openlineage_integration/emr/: openlineage_listener.py
src/lineage/openlineage_integration/lambda/: openlineage_wrapper.py
src/pipelines/: Dockerfile  README.md  ai_functions.py  alpha_vantage_functions.py  aws_functions.py  config.py  lambda_deployment.md  pyproject.toml  test_api_endpoints.py
src/pipelines/ai_analysis/: ai_anaysis_handler.py  ai_anaysis_handler_claude.py  stock_prediction_chatbot.py
src/pipelines/ingest_alpha_vantage/: ingest_basic_stock_data.py  ingest_stock_data_handler.py
src/pipelines/meta_analysis_of_models/: binary_classification_analysis.py  regression_analysis.py
src/pipelines/predictive_models/: make_binary_classification_prediction.py  make_sarimax_prediction.py  train_binary_classification_model.py  train_ensemble_binary_classification.py  train_sarimax_model.py  why_ensemble_classification.md  why_sarimax.md
src/scripts/: deploy.sh  destroy.sh  install_dependencies.sh
src/scripts/ci-cd/: post-commit.sh  pre-commit.sh
src/tests/: test_emr_jobs.py
src/tests/unit/: test_lambda_functions.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: terraform.tfvars.example
terraform/environments/prod/: terraform.tfvars.example
terraform/modules/airflow/: main.tf  outputs.tf  variables.tf
terraform/modules/emr/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
webserver/: Dockerfile  README.md  config.py  docker-compose.yml  generate_stock_prediction.py  nginx.conf  pyproject.toml  run.py  seed_data.py  server-setup.md
webserver/app/: __init__.py  airflow_request.py  api_endpoints.py  chatgpt_utils.py  errors.py  forms.py  generate_stock_prediction.py  lambda_endpoints.py  live_stock_updates.py  models.py  routes.py  simulate_trading_strategy.py
webserver/app/static/api/: openapi.yaml
webserver/app/static/css/: styles.css
webserver/app/static/js/: scripts.js
webserver/app/templates/: 404.html  500.html  about.html  ai-prediction.html  api_docs.html  base.html  contact.html  error.html  index.html  loading.html  meta-analysis.html  parameter_selection_page.html  results.html  results_page.html
webserver/app/templates/charts/: meta_analysis_chart.html
webserver/templates/: about.html  index.html
webserver/wireframes/: about_wireframe.html  ai_predictions.html  index.html
