[tool.poetry]
name = "stock-prediction-pipelines"
version = "0.1.0"
description = "Stock Prediction Pipelines"
authors = ["Josh Phillips <Josh.L.Phillips@me.com>"]

# Important: Enable virtual environments within the project
[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "3.12.6"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.28.0"
yfinance = "^0.2.43"
pandas = "^2.1.1"
scipy = "^1.11.3"
SQLAlchemy = ">=1.4.36,<2.0"
fredapi = "^0.4.3"  # Added this for the Fred API used in the code
numpy = "^1.26.0"
scikit-learn = "^1.0.2"
apache-airflow = "2.10.1"
pyspark = "^3.2.1"
#apache-airflow-providers-openlineage = "1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Deployment Scripts