[tool.poetry]
name = "stock-prediction-pipelines"
version = "0.1.0"
description = "Stock Prediction Pipelines"
authors = ["Josh Phillips <Josh.L.Phillips@me.com>"]

# Important: Enable virtual environments within the project
[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "3.12.6"
python-dotenv = "^0.19.1"
requests = "2.31.0"
psycopg2-binary = "2.9.9"
boto3 = "1.28.0"
yfinance = "0.2.43"
pandas = "2.1.1"
scipy = "1.11.3"
SQLAlchemy = "1.4.54"
numpy = "1.26.0"
scikit-learn = "1.5.2"
apache-airflow = "2.10.1"
pyspark = "3.2.1"
openlineage-python = "1.18.0"
openai = "1.39.0"
anthropic = "0.34.2"
statsmodels = "0.14.0"
plotly = "5.17.0"
xgboost = "2.1.1"
lightgbm = "4.5.0"
imblearn = "0.0"


# The second file doesn't specify a version for flask so using the first file's version
flask = "2.2.5"
flask-sqlalchemy = "2.5.1"
flask-migrate = "^3.1.0"
WTForms = "3.0.1"
Flask-WTF = "1.1.1"
Werkzeug = "2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Deployment Scripts