[tool.poetry]
name = "stock-prediction-pipelines"
version = "0.1.0"
description = "Stock Prediction Pipelines"
authors = ["Josh Phillips <Josh.L.Phillips@me.com>"]

# Important: Enable virtual environments within the project
[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "3.12.6"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
flask-migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"