[tool.poetry]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow DAGs for ETL orchestration"
authors = ["Josh Phillips <you@example.com>"]
packages = [{ include = "dags" }]

[tool.poetry.dependencies]
python = "^3.12" # Updated Python version
apache-airflow = "^2.7.0"
apache-airflow-providers-openlineage = "1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"