[tool.poetry]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow DAGs for ETL orchestration"
authors = ["Josh Phillips <you@example.com>"]

[tool.poetry.dependencies]
python = "3.12.5"
apache-airflow = "2.10.1"
psycopg2-binary = "2.9.9"
#apache-airflow-providers-openlineage = "1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"