[tool.poetry]
name = "enrich_stock_data"
version = "0.1.0"
description = "Lambda function to enrich stock data with technical indicators"
authors = ["Josh Phillips <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.28.0"
yfinance = "^0.2.43"
pandas = "^2.1.1"
scipy = "^1.11.3"
SQLAlchemy = ">=1.4.36,<2.0"
fredapi = "^0.4.3"
numpy = "^1.26.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"