[tool.poetry]
name = "ingest-postgresql"
version = "0.1.0"
description = "Lambda function to ingest data from PostgreSQL source into PostgreSQL target"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "ingest_postgresql" }]

[tool.poetry.dependencies]
python = "^3.12" # Updated Python version
psycopg2-binary = "^2.9.3"
boto3 = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"